2005-07-20  Rodrigo Moya <rodrigo@novell.com>

	* gnome-settings-screensaver.c (gnome_settings_screensaver_load):
	* gnome-settings-multimedia-keys.c (do_action): try to run
	gnome-screensaver, and if that fails, run xscreensaver.

2005-07-15  Mark McLoughlin  <mark@skynet.ie>

	Change the way XKB GConf preferences are handled so that:
	  1) GConf keys are never written unless the user changes
	     the preferences
	  2) If the keys are unset, the default XKB settings are
	     used

	See bug #310513

	* gnome-settings-keyboard-xkb.c:
	(apply_xkb_settings): use the default XKB settings for
	any unset GConf keys, and only save a copy of the default
	XKB config to GConf when we're actually apply a config
	that is different from the default.
	(gnome_settings_keyboard_xkb_sysconfig_changed_response):
	If the user decides to go back to the default XKB settings,
	just unset the GConf keys.
	(gnome_settings_keyboard_xkb_analyze_sysconfig): ignore
	overrideSettings and don't save a back of the XKB defaults
	at startup.

2005-07-25  Sebastien Bacher  <seb128@debian.org>

	* gnome-settings-accessibility-keyboard.c: (warning_dialog_post):
	* gnome-settings-keyboard-xkb.c:
	(gnome_settings_keyboard_xkb_analyze_sysconfig):
	set windows' icons, patch by Jaap A. Haitsma <jaap@haitsma.org>
	(Closes: #305096).

2005-07-12  Sebastien Bacher  <seb128@debian.org>

	* modmap-dialog.glade: fix a label form (Closes: #167739).

2005-07-07  Sebastien Bacher  <seb128@debian.org>

	* gnome-settings-keyboard-xkb.c: (activation_error):
	fixed some typo, Clytie Siddall <clytie@riverland.net.au> 
	(Closes: #302614).

2005-07-07  Sebastien Bacher  <seb128@debian.org>

	* gnome-settings-keyboard-xkb.c: (activation_error):
	fix the markup usage of the XKB dialog (Closes: #308279).

2005-07-07  Sebastien Bacher  <seb128@debian.org>

	* gnome-settings-xsettings.c: 
	patch by Matthias Clasen <mclasen@redhat.com> to expose the cursor 
	theme settings as xsettings (Closes: #308104).
