@@ -3,7 +3,8 @@ INCLUDES = $(GNOME_CFLAGS) -I$(top_srcdir) $(GST_CFLAGS)
 noinst_LTLIBRARIES = libacme.la
 
 libacme_la_SOURCES = \
-	acme-volume.c acme-volume.h
+	acme-volume.c acme-volume.h \
+	acme-volume-dummy.c acme-volume-dummy.h
 
 libacme_la_LIBADD = 
 
@@ -20,8 +21,6 @@ else # HAVE_ALSA
 if HAVE_OSS
 INCLUDES += -DHAVE_OSS
 libacme_la_SOURCES += acme-volume-oss.c acme-volume-oss.h
-else # HAVE_OSS
-libacme_la_SOURCES += acme-volume-dummy.c acme-volume-dummy.h
 endif # HAVE_OSS
 endif # HAVE_ALSA
 endif # HAVE_GSTREAMER
@@ -29,12 +28,6 @@ endif # HAVE_GSTREAMER
 if HAVE_FB
 INCLUDES += -DHAVE_FB
 libacme_la_SOURCES += acme-fb-level.c acme-fb-level.h
-endif
-
-if HAVE_GSTREAMER
-INCLUDES += -DHAVE_GSTREAMER
-libacme_la_SOURCES += acme-volume-gstreamer.c acme-volume-gstreamer.h
-libacme_la_LIBADD += $(GST_LIBS)
 endif
 
 Datadir = $(datadir)/control-center-2.0/interfaces/
@@ -47,7 +40,6 @@ EXTRA_DIST =					\
 	acme-volume-alsa.c acme-volume-alsa.h	\
 	acme-volume-gstreamer.c acme-volume-gstreamer.h	\
 	acme-volume-oss.c acme-volume-oss.h	\
-	acme-volume-dummy.c acme-volume-dummy.h	\
 	acme-fb-level.c acme-fb-level.h		\
 	acme.h					\
 	acme.glade				\
