@@ -1,3 +1,8 @@
+2005-08-03  Sebastien Bacher  <seb128@debian.org>
+
+	* actions/Makefile.am: fix the build without gstreamer and with alsa,
+	patch by Paul Drain <pd@cipherfunk.org> (Closes: #307368).
+
 2005-07-20  Rodrigo Moya <rodrigo@novell.com>
 
 	* gnome-settings-screensaver.c (gnome_settings_screensaver_load):
